<resources>
    <string name="app_name">Shoe Shop</string>
    <string name="empty_shoe_list_message">Click the Add button to add a shoe</string>
    <string name="to_add_a_new_shoe_item">To add a new shoe item</string>
    <string name="empty_shoe_list_image">empty shoe list image</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="enter_the_shoe_name">Enter the shoe name</string>
    <string name="enter_the_brand_name">Enter the brand name</string>
    <string name="size">Size</string>
    <string name="enter_a_size">Enter a size (4 - 12)</string>
    <string name="description">Description</string>
    <string name="enter_a_short_description">Enter a short description</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="password">Password</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="logo_image">Logo image</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_screen_text">Create your amazing collection of footwear that will surely make you stand out!</string>
    <string name="continue_text">Continue</string>
    <string name="welcome">WELCOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>