<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.gmail.apigeoneer.shoeshop.models.Shoe" />
    </data>

    <!-- Constraint layout is used instead of nested Linear Layouts for a flat view hierarchy -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/shoe_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/name"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/back_iv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="120dp" />

        <TextView
            android:id="@+id/shoe_brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/brand"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_tv" />

        <EditText
            android:id="@+id/shoe_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_the_shoe_name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name_tv"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_tv"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_tv" />

        <EditText
            android:id="@+id/shoe_brand_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_the_brand_name"
            android:inputType="text"
            android:textSize="16sp"
            android:text="@={shoe.brand}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_brand_tv"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/shoe_brand_tv" />

        <TextView
            android:id="@+id/shoe_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoe_brand_tv" />

        <EditText
            android:id="@+id/shoe_size_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_a_size"
            android:inputType="number"
            android:textSize="16sp"
            android:text="@={`` + shoe.size}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size_tv"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_tv"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/shoe_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_tv" />

        <EditText
            android:id="@+id/shoe_desc_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_a_short_description"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_desc_tv"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/shoe_desc_tv"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_desc_et">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>